Fix header z-index

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 */
 header{
   width: 100%;
+  z-index: 100;
   position: fixed;
   display: -webkit-flex; 
   display: flex;
